added API links to js, made two API calls, manipulated DOM for current weather, added moment.js and date to js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,28 @@ h5 {
     background-color: #008CBA; /* blue */
     border: none;
     color: white;
-    padding: 8px 88px;
+    padding: 8px 111px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.currentWeather {
+    border-style: solid;
+    border-color: lightgray;
+    font-size: large;
+}
+
+img {
+    width: 200;
+    height: 200;
+}
+
+.listSearchedCities {
+    text-align: center;
+}
+
+.pastSearches {
+    background-color: lightgrey;
 }
